--- a/.themes/ethan/source/_includes/article.html
+++ b/.themes/ethan/source/_includes/article.html
@@ -3,7 +3,7 @@
 		{% case page.type %}
 			{% when "text" %}
 				{% if page.title %}
-					<h2 class="instapaper_title"><a href="{{ root_url }}{{ page.url }}">{{ page.title }}</a></h2>
+					<h2 class="instapaper_title"><a href="/{{ page.url }}">{{ page.title }}</a></h2>
 				{% endif %}
 			{% when "photo" %}
 				<p><a href="{{ page.photo.url }}"><img src="{{ page.photo.url }}" /></a></p>
