--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -57,8 +57,30 @@
 		<script src="/jsc/lib/jquery.fitvid.js"></script>
 		<script src="/jsc/lib/jquery.media-element.js"></script>
 		<script src="/jsc/application.js"></script>
-		<script>
-			window._gaq = [['_setAccount','UAXXXXXXXX1'],['_trackPageview'],['_trackPageLoadTime']];
+		<script type="text/javascript">
+			/* Google Analytics */
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-33270842-1']);
+			_gaq.push(['_trackPageview']);
+
+			(function() {
+				var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+				ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+
+			/* Gaug.es */
+			var _gauges = _gauges || [];
+			(function() {
+				var t   = document.createElement('script');
+				t.type  = 'text/javascript';
+				t.async = true;
+				t.id    = 'gauges-tracker';
+				t.setAttribute('data-site-id', '4ffb64a5f5a1f560ad00002c');
+				t.src = '//secure.gaug.es/track.js';
+				var s = document.getElementsByTagName('script')[0];
+				s.parentNode.insertBefore(t, s);
+			})();
 		</script>
 		<!--[if lt IE 7 ]>
 			<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
