--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -5,17 +5,17 @@
 		<meta charset="utf-8">
 		<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" >
 		<meta content="width=device-width,initial-scale=1" name="viewport">
-		<meta content="The online abode of Ethan Turkeltaub." name="description">
-		<meta content="Ethan Turkeltaub" name="author">
+		<meta content="{{ site.description }}" name="description">
+		<meta content="{{ site.title }}" name="author">
 		
-		<title>Ethan Turkeltaub</title>
+		<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 		
 		<link href="humans.txt" rel="author" type="text/plain">
-		<link href="/favicon.png" rel="icon">
+		<link href="/favicon.ico" rel="icon">
 
 		<link href="/stylesheets/application.css" rel="stylesheet">
 		
-		<link href="http://feeds.feedburner.com/turkeltaub" rel="alternate" title="Ethan Turkeltaub" type="application/rss+xml" />
+		<link href="http://feeds.feedburner.com/turkeltaub" rel="alternate" title="{{ site.title }}" type="application/rss+xml" />
 		
 		<script type="text/javascript" src="http://use.typekit.com/lux8yqy.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
