added ss-social-circle webfonts.

--- a/app/assets/css/lib/includes/_fonts.scss
+++ b/app/assets/css/lib/includes/_fonts.scss
@@ -1,3 +1,5 @@
 @import "compass/css3/font-face";
 
+@import "../vendor/ss-social-circle";
+
 $sans-serif: "franklin-gothic-urw", Helvetica Neue, Helvetica, Arial, sans-serif;
