--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -19,13 +19,13 @@
 		<div id="contain">
 			<header>
 				<hgroup>
-					<h1><a href="#">Ethan Turkeltaub</a></h1>
+					<h1><a href="<%= url(:index) %>">Ethan Turkeltaub</a></h1>
 				</hgroup>
 				<nav>
 					<ul>
 						<li><a href="<%= url(:profile) %>">Profile</a></li>
-						<li><a href="#">Work</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a href="<%= url(:work) %>">Work</a></li>
+						<li><a href="<%= url(:contact) %>">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
