--- a/app/assets/css/application.css.scss
+++ b/app/assets/css/application.css.scss
@@ -51,6 +51,11 @@ h1 {
 	font-size: 1.25em;
 }
 
+h2 {
+	font-size: 1.75em;
+	margin-bottom: 1em;
+}
+
 i.ss-icon {
 	font-size: 1.5em;
 
@@ -185,8 +190,4 @@ p {
 
 	color: $grey;
 	margin-top: 2em;
-
-	p {
-		font-size: 0.85em;
-	}
 }
