--- a/app/assets/css/application.css.scss
+++ b/app/assets/css/application.css.scss
@@ -30,6 +30,7 @@
 */
 
 body {
+	background: $base;
 	color: $text;
 	font: 14px/1.75em $sans-serif;
 }
@@ -80,7 +81,6 @@ p {
 
 #contain {
 	margin-bottom: 4em;
-	margin-top: 4em;
 }
 
 
@@ -89,12 +89,16 @@ p {
 */
 
 #contain > header {
-	@include container;
+	background: $text;
+	padding-top: 4em;
+	padding-bottom: 2em;
 
-	margin-bottom: 2em;
+	.inner {
+		@include container;
+	}
 
 	a {
-		color: $text;
+		color: $base;
 
 		&:hover {
 			color: $red;
@@ -126,7 +130,6 @@ p {
 #main {
 	.page {
 		border-bottom: 1px solid #eee;
-		border-top: 1px solid #eee;
 		padding: 4em 0;
 
 		.contain {
