--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -18,16 +18,18 @@
 	<body>
 		<div id="contain">
 			<header>
-				<hgroup>
-					<h1><a href="<%= url(:index) %>">Ethan Turkeltaub</a></h1>
-				</hgroup>
-				<nav>
-					<ul>
-						<li><a href="<%= url(:profile) %>">Profile</a></li>
-						<li><a href="<%= url(:work) %>">Work</a></li>
-						<li><a href="<%= url(:contact) %>">Contact</a></li>
-					</ul>
-				</nav>
+				<div class="inner">
+					<hgroup>
+						<h1><a href="<%= url(:index) %>">Ethan Turkeltaub</a></h1>
+					</hgroup>
+					<nav>
+						<ul>
+							<li><a href="<%= url(:profile) %>">Profile</a></li>
+							<li><a href="<%= url(:work) %>">Work</a></li>
+							<li><a href="<%= url(:contact) %>">Contact</a></li>
+						</ul>
+					</nav>
+				</div>
 			</header>
 			<div id="main" role="main">
 				<%= yield %>
