--- a/app/assets/css/lib/includes/_fonts.scss
+++ b/app/assets/css/lib/includes/_fonts.scss
@@ -2,4 +2,6 @@
 
 @import "../vendor/ss-social-circle";
 
-$sans-serif: "franklin-gothic-urw", Helvetica Neue, Helvetica, Arial, sans-serif;
+$serif: "freight-text-pro-1", "freight-text-pro-2", Georgia, Times New Roman, Times, serif;
+$sans-serif: "adelle-sans-1", "adelle-sans-2", Helvetica Neue, Helvetica, Arial, sans-serif;
+$highlight: "continuo-1", "continuo-2";
