--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,8 @@
-<img src="/assets/cover.jpg">
+<div class="page">
+	<figure>
+		<img src="/assets/louvre.jpg" />
+		<figcaption>
+			<p>The Louvre in Paris.</p>
+		</figcaption>
+	</figure>
+</div>
