--- a/app/assets/css/lib/includes/_fonts.scss
+++ b/app/assets/css/lib/includes/_fonts.scss
@@ -2,6 +2,5 @@
 
 @import "../vendor/ss-social-circle";
 
-$serif: "freight-text-pro-1", "freight-text-pro-2", Georgia, Times New Roman, Times, serif;
-$sans-serif: "adelle-sans-1", "adelle-sans-2", Helvetica Neue, Helvetica, Arial, sans-serif;
-$highlight: "continuo-1", "continuo-2";
+$serif: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", Georgia, Times New Roman, Times, serif;
+$sans-serif: "futura-pt-1", "futura-pt-2", Helvetica Neue, Helvetica, Arial, sans-serif;
