--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,8 +1,10 @@
 <div class="page">
-	<figure>
-		<img src="/assets/louvre.jpg" />
-		<figcaption>
-			<p>The Louvre in Paris.</p>
-		</figcaption>
-	</figure>
+	<div class="section">
+		<figure>
+			<img src="/assets/louvre.jpg" />
+			<figcaption>
+				<p>The Louvre in Paris.</p>
+			</figcaption>
+		</figure>
+	</div>
 </div>
