--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -20,13 +20,13 @@
 			<header>
 				<div class="inner">
 					<aside>
-						<h2><a href="#">Ethan Turkeltaub</a></h2>
+						<h2><a href="<%= url(:index) %>">Ethan Turkeltaub</a></h2>
 					</aside>
 					<nav>
 						<ul>
-							<li><a href="#">Profile</a></li>
-							<li><a href="#">Work</a></li>
-							<li><a href="#">Contact</a></li>
+							<li><a href="<%= url(:profile) %>">Profile</a></li>
+							<li><a href="<%= url(:work) %>">Work</a></li>
+							<li><a href="<%= url(:contact) %>">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
