--- a/app/views/work.erb
+++ b/app/views/work.erb
@@ -1,6 +1,6 @@
 <div class="page">
-  <section class="contain">
+  <div class="section">
     <h2>Work</h2>
     <p>Work is coming soon.</p>
-  </section>
+  </div>
 </div>
