--- a/app/views/contact.erb
+++ b/app/views/contact.erb
@@ -1,6 +1,6 @@
 <div class="page">
-  <section class="contain">
+  <div class="section">
     <h2>Contact</h2>
     <p>Just <a href="mailto:ethan.turkeltaub@gmail.com">email</a> me if you need me. A real contact page is coming soon.</p>
-  </section>
+  </div>
 </div>
