--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -1,34 +1,27 @@
 <div class="page">
-	<section class="contain">
+	<div class="section">
 		<aside>
 			<figure>
-				<img src="https://secure.gravatar.com/avatar/f8f311482dd027bc420c0fbe4de7dc33?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
+				<img src="https://secure.gravatar.com/avatar/f8f311482dd027bc420c0fbe4de7dc33?s=420&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" />
 			</figure>
-			<section class="experience">
-				<h3>Experience</h3>
-				<article>
-					<h4>Fanzter</h4>
-					<p>Technology Intern</p>
-					<p class="timespan">June 2011 &ndash; present</p>
-				</article>
-			</section>
-			<nav>
-				<ul class="networks">
-					<li><i class="ss-icon"><a href="http://twitter.com/ethnt">twitter</a></i></li>
-					<li><i class="ss-icon"><a href="http://gplus.to/ethnt">google+</a></i></li>
-					<li><i class="ss-icon"><a href="https://github.com/eturk">octocat</a></i></li>
-					<li><i class="ss-icon"><a href="http://stackoverflow.com/users/213282/ethan-turkeltaub">stackoverflow</a></i></li>
-					<li><i class="ss-icon"><a href="http://www.rdio.com/people/ethnt/">rdio</a></i></li>
-					<li><i class="ss-icon"><a href="http://dribbble.com/ethan">dribbble</a></i></li>
-				</ul>
-			</nav>
 		</aside>
 		<section>
-			<p>My name is Ethan Turkeltaub, and I'm a seventeen-year-old high school student and web developer. For as long as I can remember, I've had an interest in computers&mdash;in pre-school, for example, I'd fix the computers for my teachers. Later on in 2006 (sixth grade), I picked up a book about HTML and created my first website. As I learned more and more, the more complex and useful the websites became. Now, six years later, I'm at a point where I can work with professional web developers on large-scale websites that recieve hundreds of thousands of visitors each year.</p>
-
-      <p>Over the last two summers, I was a technology intern with a local web startup, <a href="http://fanzter.com">Fanzter, Inc.</a>. We maintain the popular celebrity fashion <a href="http://coolspotters.com">Coolspotters</a>, as well as several popular iOS apps, such as <a href="http://fanzter.com/products/coolpapers">CoolPapers</a> and <a href="http://fanzter.com/products/streaks">Streaks</a>. It was my responsibility to maintain internal products. In 2011, I rewrote our URL shortener, <a href="http://coo.ly/make">coo.ly</a> and integrated it with Coolspotters and its Twitter feed. This summer, I created an internal tool called Rollcall to keep track of what you're working on. You write a simple status update as to what you're working on, and other employees can see what you're working on week to week. This is useful for transparency within the company and for creating monthly reports.</p>
-
-      <p>I'd really like to attend college for computer science. While I know enough to make a little money, I don't know everything. I want to expand my breadth of knowledge and learn about as much as I can because it is something that genuinely interests me. Where I am right now, I can only demonstrate a knowledge of programming, not computer science and I want to change that. Computer science is a vital part of the world we live in, and I want to be part of that.</p>
+			<h3>Hi, I'm Ethan, and I'm a student and web developer.</h3>
+			<p>I've been making websites for a while &mdash; since the ripe old age of ten. Now, I'm eighteen, and I'm a computer science major at <a href="http://marist.edu">Marist College</a> in Poughkeepsie, New York. I'm also a web developer at <a href="http://fanzter.com">Fanzter</a>, helping them develop new products. For my senior capstone project in high school, I also created <a href="http://beta.getnotedapp.com">Noted</a>, a tool for students to organize their research.</p>
 		</section>
-	</section>
+	</div>
+	<!--<div class="section">
+		<aside>
+			<h4>Education</h4>
+		</aside>
+		<section>
+			<ul>
+				<li>
+					<p><strong>Farmington High School</strong></p>
+					<p><em>Sept. 2009 &ndash; June 2013</em></p>
+				</li>
+				<li
+			</ul>
+		</section>
+	</div>-->
 </div>
