--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -10,18 +10,41 @@
 			<p>I've been making websites for a while &mdash; since the ripe old age of ten. Now, I'm eighteen, and I'm a computer science major at <a href="http://marist.edu">Marist College</a> in Poughkeepsie, New York. I'm also a web developer at <a href="http://fanzter.com">Fanzter</a>, helping them develop new products. For my senior capstone project in high school, I also created <a href="http://beta.getnotedapp.com">Noted</a>, a tool for students to organize their research.</p>
 		</section>
 	</div>
-	<!--<div class="section">
+	<div class="section">
 		<aside>
 			<h4>Education</h4>
 		</aside>
 		<section>
-			<ul>
+			<ul class="employment">
 				<li>
 					<p><strong>Farmington High School</strong></p>
 					<p><em>Sept. 2009 &ndash; June 2013</em></p>
 				</li>
-				<li
+				<li>
+					<p><strong>Marist College</strong></p>
+					<p>Computer Science</p>
+					<p><em>Aug. 2013 &ndash; present</em></p>
+				</li>
 			</ul>
 		</section>
-	</div>-->
+	</div>
+	<div class="section">
+		<aside>
+			<h4>Experience</h4>
+		</aside>
+		<section>
+			<ul class="employment">
+				<li>
+					<p><strong>Fanzter</strong></p>
+					<p>Technology Intern</p>
+					<p><em>Jun. 2011 &ndash; present</em></p>
+				</li>
+				<li>
+					<p><strong>Noted</strong></p>
+					<p>Creator</p>
+					<p><em>Sept. 2012 &ndash; present</em></p>
+				</li>
+			</ul>
+		</section>
+	</div>
 </div>
