--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -36,7 +36,19 @@
 			</div>
 			<footer>
 				<div class="inner">
-					<p>Ethan Turkeltaub fecit <%= Time.now.year %>.</p>
+					<section>
+						<p>Ethan Turkeltaub fecit <%= Time.now.year %>.</p>
+						<p><span>Source code for this site is available <a href="https://github.com/eturk/ethan">on GitHub</a>.</span></p>
+					</section>
+					<nav>
+						<ul>
+							<li><a href="https://twitter.com/ethnt"><i class="ss-icon">twitter</i></a></li>
+							<li><a href="https://github.com/eturk"><i class="ss-icon">github</i></a></li>
+							<li><a href="http://dribbble.com/ethan"><i class="ss-icon">dribbble</i></a></li>
+							<li><a href="http://instagram.com/ethnt"><i class="ss-icon">instagram</i></a></li>
+							<li><a href="http://flickr.com/ethnt"><i class="ss-icon">flickr</i></a></li>
+						</ul>
+					</nav>
 				</div>
 			</footer>
 		</div>
