--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,9 +1,9 @@
 <div class="page">
 	<div class="section">
 		<figure>
-			<img src="/assets/louvre.jpg" />
+			<img class="cover-image" src="" />
 			<figcaption>
-				<p>The Louvre in Paris.</p>
+				<p class="cover-caption"></p>
 			</figcaption>
 		</figure>
 	</div>
