--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -7,7 +7,7 @@
 		</aside>
 		<section>
 			<h3>Hi, I'm Ethan, and I'm a student and web developer.</h3>
-			<p>I've been making websites for a while &mdash; since the ripe old age of ten. Now, I'm eighteen, and I'm a computer science major at <a href="http://marist.edu">Marist College</a> in Poughkeepsie, New York. I'm also a web developer at <a href="http://fanzter.com">Fanzter</a>, helping them develop new products. For my senior capstone project in high school, I also created <a href="http://beta.getnotedapp.com">Noted</a>, a tool for students to organize their research.</p>
+			<p>I've been making websites for a while &mdash; since the ripe old age of ten. Now, I'm eighteen, and I'm a computer science major at <a href="http://marist.edu">Marist College</a> in Poughkeepsie, New York. I'm also a web developer at <a href="http://fanzter.com">Fanzter</a>, helping them develop new products. Additionally, for my senior capstone project in high school, I also created <a href="http://beta.getnotedapp.com">Noted</a>, a tool for students to organize their research.</p>
 		</section>
 	</div>
 	<div class="section">
