--- a/app/views/layouts/application.erb
+++ b/app/views/layouts/application.erb
@@ -47,6 +47,7 @@
 							<li><a href="http://dribbble.com/ethan"><i class="ss-icon">dribbble</i></a></li>
 							<li><a href="http://instagram.com/ethnt"><i class="ss-icon">instagram</i></a></li>
 							<li><a href="http://flickr.com/ethnt"><i class="ss-icon">flickr</i></a></li>
+							<li><a href="http://rdio.com/people/ethnt"><i class="ss-icon">rdio</i></a></li>
 						</ul>
 					</nav>
 				</div>
