--- a/app/views/profile.erb
+++ b/app/views/profile.erb
@@ -7,7 +7,10 @@
 		</aside>
 		<section>
 			<h3>Hi, I'm Ethan, and I'm a student and web developer.</h3>
-			<p>I've been making websites for a while &mdash; since the ripe old age of ten. Now, I'm eighteen, and I'm a computer science major at <a href="http://marist.edu">Marist College</a> in Poughkeepsie, New York. I'm also a web developer at <a href="http://fanzter.com">Fanzter</a>, helping them develop new products. Additionally, for my senior capstone project in high school, I also created <a href="http://beta.getnotedapp.com">Noted</a>, a tool for students to organize their research.</p>
+			<p>I've been making websites for a while &mdash; since the ripe old age of ten. Now, I'm eighteen, and I'm a computer science major at <a href="http://marist.edu">Marist College</a> in Poughkeepsie, New York. I'm also a web developer at <a href="http://fanzter.com">Fanzter</a>, helping them develop new products.</p>
+			<p>For my senior capstone project in high school, I created <a href="http://beta.getnotedapp.com">Noted</a>, a tool for students to organize their research. It's still in development, and hopefully will be ready for college students to use for the fall semester.</p>
+			<p>Making web applications really is a passion of mine. At this point, I'm fairly proficient at <a href="http://ruby-lang.org">Ruby</a> and <a href="http://rubyonrails.org">Ruby on Rails</a> (though I prefer <a href="http://padrinorb.com">Padrino</a>), but in the past I've used <a href="http://nodejs.org">Node.js</a>, PHP, and Java.</p>
+			<p>Though I'm pretty busy with Fanzter and, in the fall, school, I'm open to talking about any of your projects. Just <a href="javascript:$.balloon({ username: 'ethnt/ethan-turkeltaub' })">drop me a line</a> and we'll get cracking!</p>
 		</section>
 	</div>
 	<div class="section">
